# kuka_experimental

./: .gitignore
kuka_eki_hw_interface/: CMakeLists.txt
kuka_kr10_support/: package.xml
kuka_kr10_support/launch/: load_kr10r1100sixx_2.launch  test_kr10r1100sixx_2.launch
kuka_kr10_support/meshes/kr10r1100sixx_2/collision/: base_link.stl  link_1.stl  link_4.stl  link_5.stl
kuka_kr10_support/meshes/kr10r1100sixx_2/visual/: link_2.stl  link_3.stl  link_6.stl
kuka_kr10_support/test/: roslaunch_test_kr10r1100sixx_2.xml
kuka_kr10_support/urdf/: kr10r1100sixx_2.urdf  kr10r1100sixx_2.xacro  kr10r1100sixx_2_macro.xacro  kr10r1100sixx_macro.xacro
kuka_kr16_support/: package.xml
kuka_kr16_support/launch/: load_kr16r1610_2.launch  load_kr16r2010_2.launch  test_kr16r1610_2.launch  test_kr16r2010_2.launch
kuka_kr16_support/meshes/kr16r1610_2/collision/: link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl
kuka_kr16_support/meshes/kr16r1610_2/visual/: base_link.dae  link_1.dae  link_2.dae  link_4.dae  link_5.dae  link_6.dae
kuka_kr16_support/meshes/kr16r2010_2/collision/: base_link.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
kuka_kr16_support/meshes/kr16r2010_2/visual/: base_link.dae  base_link.stl  link_1.dae  link_1.stl  link_2.dae  link_4.dae  link_4.stl  link_5.dae  link_6.dae  link_6.stl
kuka_kr16_support/urdf/: kr16r1610_2.xacro  kr16r1610_2_macro.xacro  kr16r1610_2_params.xacro  kr16r2010_2.urdf  kr16r2010_2.xacro  kr16r2010_2_macro.xacro  kr16r2010_2_params.xacro
kuka_kr300_support/: CMakeLists.txt  package.xml
kuka_kr300_support/launch/: load_kr300r2700_2.launch  test_kr300r2700_2.launch
kuka_kr300_support/meshes/kr300r2700_2/collision/: base_link.stl  link_2.stl  link_5.stl
kuka_kr300_support/meshes/kr300r2700_2/visual/: link_1.stl  link_3.stl  link_4.stl  link_6.stl
kuka_kr300_support/test/: roslaunch_test_kr300r2700_2.xml
kuka_kr300_support/urdf/: kr300r2700_2.urdf  kr300r2700_2.xacro  kr300r2700_2_macro.xacro
kuka_rsi_hw_interface/: CMakeLists.txt  package.xml
kuka_rsi_hw_interface/config/: hardware_controllers.yaml
kuka_rsi_hw_interface/include/kuka_rsi_hw_interface/: kuka_hardware_interface.h
kuka_rsi_hw_interface/launch/: robot_interface_streaming.launch
kuka_rsi_hw_interface/msg/: LoggerMessage.msg
kuka_rsi_hw_interface/src/: kuka_hardware_interface.cpp  kuka_hardware_interface_node.cpp
kuka_rsi_hw_interface/test/: test_hardware_interface.launch  test_params.yaml
kuka_rsi_simulator/: CMakeLists.txt  package.xml
kuka_rsi_simulator/launch/: kuka_rsi_simulator.launch
kuka_rsi_simulator/scripts/: kuka_rsi_simulator
kuka_rsi_simulator/src/: kuka_rsi_simulator.cpp
